# wechat-agent

./: .gitignore  README.md  pyproject.toml  需求和技术文档.md
config/: openai-responses.example.json
dashboard/: package-lock.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/wechat/[...path]/: route.ts
dashboard/app/lib/: summary-storage.ts  wechat-api.ts  wechat-server.ts
dashboard/app/summary/: page.tsx
dashboard/app/ui/: dashboard-app.tsx  icons.tsx  summary-report-page.tsx
design-system/wechat-agent-dashboard/: MASTER.md
design-system/wechat-agent-dashboard/pages/: dashboard.md  summary.md
src/wechat_agent_cli/: __init__.py  cli.py  copying.py  dashboard.py  decrypt.py  key_extract.py  keys.py  native_crypto.py  scanner.py  sqlcipher_native.py  sync.py  verify.py  workspace.py
src/wechat_agent_cli/prompts/: wechat_message_summary.md
tests/: test_cli_core.py
